--- a/index.html
+++ b/index.html
@@ -186,8 +186,8 @@
 
     <!-- Start copyright  -->
     <div class="footer-copyright">
-        <p class="footer-company">All Rights Reserved. &copy; 2018 <a href="#">ThewayShop</a> Design By :
-            <a href="https://html.design/">html design</a></p>
+        <p class="footer-company">All Rights Reserved. &copy; 2018 <a href="#"></a> Design By :
+            <a href="https://GitHub.com/onoja123/">Okpe onoja</a></p>
     </div>
     <!-- End copyright  -->
 
