--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Site Metas -->
-    <title>Freshshop - Ecommerce Bootstrap 4 HTML Template</title>
+    <title>Dee</title>
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -186,7 +186,7 @@
 
     <!-- Start copyright  -->
     <div class="footer-copyright">
-        <p class="footer-company">All Rights Reserved. &copy; 2018 <a href="#"></a> Design By :
+        <p class="footer-company">All Rights Reserved. &copy; 2021 <a href="#"></a> Design By :
             <a href="https://GitHub.com/onoja123/">Okpe onoja</a></p>
     </div>
     <!-- End copyright  -->
